--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
                                     <div class="absolute inset-0 bg-cyber-neon/5 group-hover:bg-transparent transition-all duration-500"></div>
                                     <div class="absolute inset-0 bg-black/90 flex flex-col items-center justify-center gap-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                                        <a href="#https://github.com/riturajsingh0001/PhishGuard_AI.git" class="px-6 py-2 border border-cyber-neon text-cyber-neon rounded-full hover:bg-cyber-neon/10 transition-all transform hover:scale-105 w-40 text-center nav-link">
+                                        <a href="https://github.com/riturajsingh0001/PhishGuard_AI.git" class="px-6 py-2 border border-cyber-neon text-cyber-neon rounded-full hover:bg-cyber-neon/10 transition-all transform hover:scale-105 w-40 text-center nav-link">
                                             <i class="fab fa-github mr-2"></i>View Code
                                         </a>
                                     </div>
@@ -489,6 +489,7 @@
                                     <div class="flex flex-wrap gap-2 mb-6">
                                         <span class="px-3 py-1 text-xs font-mono bg-gray-900 text-cyber-neon rounded border border-cyber-neon/20">Python</span>
                                         <span class="px-3 py-1 text-xs font-mono bg-gray-900 text-cyber-neon rounded border border-cyber-neon/20">Scikit-Learn</span>
+                                        <span class="px-3 py-1 text-xs font-mono bg-gray-900 text-cyber-neon rounded border border-cyber-neon/20">Jupyter Notebook</span>
                                     </div>
                                 </div>
                             </div>
@@ -752,5 +753,6 @@
 </body>
 
 </html>
+
 
 
