--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
                             <div class="glass-card rounded-xl overflow-hidden flex flex-col h-full group">
                                 <div class="h-52 bg-gray-900 relative overflow-hidden">
-                                     <img src="https://placehold.co/600x400/080808/00f3ff?text=PhishGuard+AI" alt="PhishGuard AI" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                                     <img src="Phishguard.png" alt="PhishGuard AI" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
 
                                     <div class="absolute inset-0 bg-cyber-neon/5 group-hover:bg-transparent transition-all duration-500"></div>
                                     <div class="absolute inset-0 bg-black/90 flex flex-col items-center justify-center gap-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -753,6 +753,7 @@
 </body>
 
 </html>
+
 
 
 
