--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 </div>
 
                 <p class="text-gray-400 mb-10 text-lg max-w-lg leading-relaxed font-light border-l-2 border-cyber-neon/30 pl-6">
-                    Specializing in offensive security, network defense, and vulnerability assessment. Dedicated to securing the digital infrastructure of tomorrow.
+                    Aspiring Security Analyst with a strong interest in SOC operations, digital forensics, and web & API penetration testing. 
+                    Actively building skills to detect threats, analyze attacks, and strengthen organizational security.
                 </p>
                 
                 <div class="flex flex-wrap gap-4">
@@ -753,6 +754,7 @@
 </body>
 
 </html>
+
 
 
 
