--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 I'm currently a <strong class="text-white">2nd year B.Tech Student</strong> specializing in Cybersecurity at <strong class="text-white">Quantum University, Roorkee, Uttarakhand</strong>. My journey is driven by an obsession with understanding the underlying architecture of digital systems.
                             </p>
                             <p>
-                                Beyond academics, I drive campus initiatives as a <strong class="text-cyber-neon">Google Developers Group On Campus Core Member</strong>, serving as a Cybersecurity Mentor. Additionally, I am a member of the <strong class="text-cyber-neon">Corporate Resource Center (CRC)</strong>, where I coordinate placement drives and university events. Simultaneously, I am mastering <strong class="text-cyber-neon">ethical hacking fundamentals, network security protocols, and Linux environments</strong> through rigorous hands-on practice.
+                                Beyond academics, I drive campus initiatives as a <strong class="text-cyber-neon">Google Developers Group On Campus Core Member</strong>, serving as a Cybersecurity Mentor. Additionally, I am a member of the <strong class="text-cyber-neon">Corporate Resource Center (CRC)</strong>, where I coordinate placement drives and university events. Simultaneously, I am building a strong foundation toward becoming a <strong class="text-cyber-neon">Security Analyst,</strong> focusing on <strong class="text-cyber-neon">SOC fundamentals, network behavior analysis, Linux-based systems, and web & API security </strong>through consistent hands-on labs and real-world simulations.
                             </p>
                             <p>
                                 My objective is clear: to evolve into a security professional capable of preempting threats and fortifying critical infrastructures against sophisticated attacks.
@@ -754,6 +754,7 @@
 </body>
 
 </html>
+
 
 
 
