--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </div>
                             <div>
                                 <h3 class="font-bold text-white font-cyber text-sm">Ethical Hacker</h3>
-                                <p class="text-xs text-gray-500 font-mono">Offensive Security</p>
+                                <p class="text-xs text-gray-500 font-mono">Offense & Defense</p>
                             </div>
                         </div>
                         <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:bg-cyber-neon/5 transition-all group cursor-default">
@@ -246,7 +246,7 @@
                             </div>
                             <div>
                                 <h3 class="font-bold text-white font-cyber text-sm">Pen Tester</h3>
-                                <p class="text-xs text-gray-500 font-mono">Network Defense</p>
+                                <p class="text-xs text-gray-500 font-mono">Web & API Security</p>
                             </div>
                         </div>
                         <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:bg-cyber-neon/5 transition-all group cursor-default">
@@ -263,8 +263,8 @@
                                 <i class="fas fa-bug text-xl"></i>
                             </div>
                             <div>
-                                <h3 class="font-bold text-white font-cyber text-sm">Bug Hunter</h3>
-                                <p class="text-xs text-gray-500 font-mono">Vulnerability Research</p>
+                                <h3 class="font-bold text-white font-cyber text-sm">Governance Enthusiast</h3>
+                                <p class="text-xs text-gray-500 font-mono">Security Policies</p>
                             </div>
                         </div>
                     </div>
@@ -754,6 +754,7 @@
 </body>
 
 </html>
+
 
 
 
