--- a/index.html
+++ b/index.html
@@ -294,17 +294,17 @@
                 <div class="p-8 font-mono text-sm sm:text-base bg-black/80">
                     <div class="mb-6">
                         <p class="text-green-400 mb-2">root@kali:~$ cat languages.txt</p>
-                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Python, Java, Bash, HTML5, CSS3, JavaScript, SQL</p>
+                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Python, Java, Bash, HTML5, CSS3, JavaScript, React.js, Express.js, Node.js, MySQL, MongoDB</p>
                     </div>
                     
                     <div class="mb-6">
                         <p class="text-green-400 mb-2">root@kali:~$ cat tools.txt</p>
-                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Kali Linux, Metasploit, Burp Suite, Nmap, Wireshark, OWASP ZAP, Git, SQLMap, John The Ripper</p>
+                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Kali Linux, Metasploit, Burp Suite, Nmap, Wireshark, OWASP ZAP, Git, SQLMap, Maltego, John The Ripper,...</p>
                     </div>
 
                     <div class="mb-2">
                         <p class="text-green-400 mb-2">root@kali:~$ cat competencies.txt</p>
-                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Web & API Penetration Testing, MERN Application Security Fundamentals, Vulnerability Assessment, Network Traffic Analysis, Security Fundamentals,OSINT</p>
+                        <p class="text-gray-300 pl-4 border-l-2 border-gray-800">Web & API Penetration Testing, MERN Application Security Fundamentals, Vulnerability Assessment, Network Traffic Analysis, Security Fundamentals,OSINT,...</p>
                     </div>
                     
                     <div class="mt-4 flex items-center">
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
