--- a/index.html
+++ b/index.html
@@ -219,14 +219,22 @@
                         <div class="absolute top-0 left-0 w-1 h-full bg-cyber-neon transition-all duration-300 group-hover:h-full h-10"></div>
                         <div class="font-sans text-lg text-gray-300 space-y-6 leading-relaxed">
                             <p>
-                                I'm currently a <strong class="text-white">2nd year B.Tech Student</strong> specializing in Cybersecurity at <strong class="text-white">Quantum University, Roorkee, Uttarakhand</strong>. My journey is driven by an obsession with understanding the underlying architecture of digital systems.
-                            </p>
-                            <p>
-                                Beyond academics, I drive campus initiatives as a <strong class="text-cyber-neon">Google Developers Group On Campus Core Member</strong>, serving as a Cybersecurity Mentor. Additionally, I am a member of the <strong class="text-cyber-neon">Corporate Resource Center (CRC)</strong>, where I coordinate placement drives and university events. Simultaneously, I am building a strong foundation toward becoming a <strong class="text-cyber-neon">Security Analyst,</strong> focusing on <strong class="text-cyber-neon">SOC fundamentals, network behavior analysis, Linux-based systems, and web & API security </strong>through consistent hands-on labs and real-world simulations.
-                            </p>
-                            <p>
-                                My objective is clear: to evolve into a security professional capable of preempting threats and fortifying critical infrastructures against sophisticated attacks.
-                            </p>
+    I'm currently a <strong class="text-white">2nd year B.Tech Student</strong> with a focused interest in <strong class="text-white">Cybersecurity</strong> at <strong class="text-white">Quantum University, Roorkee, Uttarakhand</strong>. 
+    My journey is driven by a strong curiosity to understand how modern systems and applications are built, how they are attacked, and how security threats can be effectively detected and analyzed.
+</p>
+
+<p>
+    Beyond academics, I am a <strong class="text-cyber-neon">Core Team Member at Google Developers Group (GDG) On Campus</strong>,  serving as a <strong class="text-cyber-neon">Facilitator for the Cybersecurity Domain</strong>. 
+    I am also a member of the <strong class="text-cyber-neon">Corporate Resource Center (CRC)</strong>, where I contribute to placement activities and university events. 
+    Alongside this, I am building a strong foundation toward becoming a <strong class="text-cyber-neon">SOC Analyst</strong>, focusing on <strong class="text-cyber-neon">SOC fundamentals, network behavior analysis, Linux-based systems, web & API security</strong>, 
+    and <strong class="text-cyber-neon">security-focused MERN learning</strong> to understand modern application architectures, authentication flows, and API attack surfaces.
+</p>
+
+<p>
+    My objective is clear: to grow into a security professional capable of understanding attacker behavior, 
+    analyzing security alerts, and supporting effective threat detection and response in real-world environments.
+</p>
+
                         </div>
                     </div>
 
@@ -752,6 +760,7 @@
 </body>
 
 </html>
+
 
 
 
