--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 </div>
 
                 <p class="text-gray-400 mb-10 text-lg max-w-lg leading-relaxed font-light border-l-2 border-cyber-neon/30 pl-6">
-                    Aspiring Security Analyst with a strong interest in SOC operations, digital forensics, and web & API penetration testing. 
-                    Actively building skills to detect threats, analyze attacks, and strengthen organizational security.
+                   Aspiring SOC Analyst with a strong interest in SOC operations and web & API security.
+                   Actively building hands-on skills to detect threats, analyze security alerts, and support effective incident response.
                 </p>
                 
                 <div class="flex flex-wrap gap-4">
@@ -760,6 +760,7 @@
 </body>
 
 </html>
+
 
 
 
